--- a/app/globals.css
+++ b/app/globals.css
@@ -135,6 +135,8 @@
 
   --color-popover: var(--white);
   --color-popover-foreground: var(--neutral-900);
+
+  --color-tertiary: var(--adamo-pay-300);
 }
 
 @layer base {
@@ -150,7 +152,7 @@
   }
 
   .heading-1 {
-    @apply text-5xl leading-[1.2] font-semibold tracking-[-2.4px];
+    @apply font-display text-[40px] leading-[1.2] font-semibold tracking-[-2px] md:text-5xl md:tracking-[-2.4px];
   }
 
   .heading-2 {
@@ -165,5 +167,21 @@
 
   @variant md {
     padding-inline: 2rem;
+  }
+}
+
+@utility hero-gradient {
+  background: linear-gradient(
+    180deg,
+    #111927 28.95%,
+    rgba(17, 25, 39, 0) 53.39%
+  );
+
+  @variant md {
+    background: linear-gradient(
+      180deg,
+      #111927 28.95%,
+      rgba(17, 25, 39, 0) 68.31%
+    );
   }
 }
