--- a/app/globals.css
+++ b/app/globals.css
@@ -125,6 +125,8 @@
   --color-primary-foreground: var(--white);
   --color-primary-hover: var(--neutral-800);
   --color-primary-active: var(--neutral-700);
+  --color-primary-disabled: var(--neutral-200);
+  --color-primary-disabled-foreground: var(--neutral-400);
 
   --color-secondary: var(--white);
   --color-secondary-foreground: var(--neutral-900);
@@ -156,7 +158,7 @@
   }
 
   .heading-2 {
-    @apply text-[32px] leading-normal font-semibold tracking-[-1.6px];
+    @apply font-display text-[30px] leading-[1.25] font-semibold tracking-[-1.6px] md:text-[32px];
   }
 }
 
@@ -183,5 +185,34 @@
       #111927 28.95%,
       rgba(17, 25, 39, 0) 68.31%
     );
+  }
+}
+
+@layer utilities {
+  /* .overlay-scrollbar {
+    overflow-y: overlay;
+    scrollbar-width: thin;
+  } */
+
+  .overlay-scrollbar::-webkit-scrollbar {
+    width: 6px;
+  }
+
+  .overlay-scrollbar::-webkit-scrollbar-track {
+    background: transparent;
+  }
+
+  .overlay-scrollbar::-webkit-scrollbar-thumb {
+    background-color: rgba(156, 163, 175, 0.5);
+    border-radius: 20px;
+  }
+
+  .no-scrollbar::-webkit-scrollbar {
+    display: none;
+  }
+
+  .no-scrollbar {
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
   }
 }
