--- a/app/globals.css
+++ b/app/globals.css
@@ -121,6 +121,18 @@
   --color-border: var(--neutral-200);
   --color-divide: var(--neutral-100);
 
+  --color-neutral-25: var(--neutral-25);
+  --color-neutral-50: var(--neutral-50);
+  --color-neutral-100: var(--neutral-100);
+  --color-neutral-200: var(--neutral-200);
+  --color-neutral-300: var(--neutral-300);
+  --color-neutral-400: var(--neutral-400);
+  --color-neutral-500: var(--neutral-500);
+  --color-neutral-600: var(--neutral-600);
+  --color-neutral-700: var(--neutral-700);
+  --color-neutral-800: var(--neutral-800);
+  --color-neutral-900: var(--neutral-900);
+
   --color-primary: var(--neutral-900);
   --color-primary-foreground: var(--white);
   --color-primary-hover: var(--neutral-800);
