--- a/app/globals.css
+++ b/app/globals.css
@@ -344,3 +344,8 @@ body[data-preloader-complete="true"] [data-animation-down="5"] {
 .mf-cursor-text {
   @apply !text-xs;
 }
+
+/* Blog Slider */
+.slide-image {
+  @apply absolute top-0 left-0 h-[var(--slide-image-size)] w-[var(--slide-image-size)] overflow-hidden rounded-3xl opacity-0;
+}
