feat: add exchange banner component and update adamo pay page

--- a/app/globals.css
+++ b/app/globals.css
@@ -158,6 +158,8 @@
   --color-adamo-id-700: var(--adamo-id-700);
   --color-adamo-id-900: var(--adamo-id-900);
 
+  --color-adamo-pay-100: var(--adamo-pay-100);
+  --color-adamo-pay-600: var(--adamo-pay-600);
   --color-adamo-pay-700: var(--adamo-pay-700);
   --color-adamo-pay-900: var(--adamo-pay-900);
 }
