--- a/app/globals.css
+++ b/app/globals.css
@@ -162,6 +162,8 @@
   --color-adamo-pay-600: var(--adamo-pay-600);
   --color-adamo-pay-700: var(--adamo-pay-700);
   --color-adamo-pay-900: var(--adamo-pay-900);
+
+  --drop-shadow-parallax: -48px 32px 56px rgba(77, 87, 97, 0.08);
 }
 
 @layer base {
