--- a/app/globals.css
+++ b/app/globals.css
@@ -352,7 +352,7 @@ body[data-preloader-complete="true"] [data-animation-down="5"] {
 }
 
 .mf-cursor-text {
-  @apply !text-xs;
+  @apply !text-[10px];
 }
 
 /* Blog Slider */
