feat(service): updated texts and added animation for title-to-description transition

--- a/app/globals.css
+++ b/app/globals.css
@@ -356,11 +356,12 @@ body[data-preloader-complete="true"] [data-animation-down="5"] {
 }
 
 .mf-cursor-text {
-  @apply !text-[8px];
+  @apply !text-[7px];
+ ;
 }
 
 .mf-cursor.-text:before {
-  transform: scale(1.2) !important;
+  transform: scale(1.0) !important;
 }
 
 /* Blog Slider */
