--- a/app/globals.css
+++ b/app/globals.css
@@ -165,6 +165,11 @@
   --color-adamo-pay-700: var(--adamo-pay-700);
   --color-adamo-pay-900: var(--adamo-pay-900);
 
+  --color-adamo-sign-100: var(--adamo-sign-100);
+  --color-adamo-sign-600: var(--adamo-sign-600);
+  --color-adamo-sign-700: var(--adamo-sign-700);
+  --color-adamo-sign-900: var(--adamo-sign-900);
+
   --color-success-600: var(--success-600);
 
   --drop-shadow-parallax: -48px 32px 56px rgba(77, 87, 97, 0.08);
