Update services card

--- a/app/globals.css
+++ b/app/globals.css
@@ -168,6 +168,7 @@
   --color-adamo-sign-100: var(--adamo-sign-100);
   --color-adamo-sign-600: var(--adamo-sign-600);
   --color-adamo-sign-700: var(--adamo-sign-700);
+  --color-adamo-sign-800: var(--adamo-sign-800);
   --color-adamo-sign-900: var(--adamo-sign-900);
 
   --color-success-600: var(--success-600);
